test/parser/positive/FieldInitializers.java
public class FieldInitializers {
  public FieldInitializers() {}
  protected int x = 42;
}
