test/parser/negative/FinalFields.java
  public class FinalFields {
    public FinalFields() {}
    public final int x = 42;
  }
